--- a/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
@@ -74,7 +74,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <a href="#">
+                    <a href="@Url.Action("Index", "Matrimonios")">
                         <img src="~/Img/LogoMatrimonio.png" class="card-img-top" alt="..."/>
                     </a>
                     <div class="card-body">
