--- a/PaginaParroquia/PaginaParroquia/Views/Confirmas/Edit.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Confirmas/Edit.cshtml
@@ -17,27 +17,21 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.IDConfirma)
 
+    <div class="form-group">
+        <div class="col-md-10">
+            @Html.HiddenFor(model => model.IDPersona)
+        </div>
+    </div>
+
         <div class="form-group">
-            @Html.LabelFor(model => model.IDPersona, "IDPersona", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IDPersona", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDPersona, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.IDRelacion)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IDRelacion, "IDRelacion", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IDRelacion", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDRelacion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IDBautismo, "IDBautismo", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IDBautismo", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDBautismo, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.IDBautismo)
             </div>
         </div>
 
@@ -66,10 +60,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Fecha, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Fecha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Fecha, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Fecha)
             </div>
         </div>
 
@@ -99,7 +91,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
